--- a/css/trs.css
+++ b/css/trs.css
@@ -5,3 +5,8 @@
   color: inherit;
   background-color: #eee;
 }
+p.normal {
+    font-style: normal;
+	font-family: "Times New Roman", Times, serif;
+	font-size: 20px;
+}
